# blind_watermark

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  START_HERE.md
.serena/: project.yml
backend/: README.md  pyproject.toml  run.py  test_imports.py
backend/app/: __init__.py  main.py
backend/app/api/: watermark.py
backend/app/core/blind_watermark/: __init__.py  cli_tools.py  constants.py  exceptions.py  types.py
backend/app/core/blind_watermark/attacks/: __init__.py  color.py  geometric.py  noise.py
backend/app/core/blind_watermark/core/: __init__.py  algorithms.py  converters.py  engine.py  image_processor.py  kmeans.py  watermark.py
backend/app/core/blind_watermark/recovery/: __init__.py  crop_recovery.py  template_matching.py
backend/app/core/blind_watermark/utils/: __init__.py  encryption.py  image_io.py  pool.py
backend/app/core/watermark/: __init__.py  att.py  config.py  facade.py  pool.py  recover.py
backend/app/core/watermark/cli/: __init__.py  entrypoint.py
backend/app/core/watermark/operations/: __init__.py  algorithm.py  blocks.py  transforms.py
backend/app/core/watermark/robustness/: __init__.py  attacks.py  recovery.py
backend/app/core/watermark/runner/: __init__.py  encoder.py  extractor.py
backend/app/core/watermark/runtime/: __init__.py  pool.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  watermark_service.py
backend/tests/: test_refactoring.py  test_watermark_service.py
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  REFACTOR_WATERMARK_CORE.md  (+1 more)
scripts/: build.sh  (+6 more)
(+20 files in other folders)
